@@ -27,8 +27,10 @@ the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.  */
 #undef close
 #endif
 
+#include <stdlib.h>
+#include <string.h>
 
-#if !defined(BSD) && !defined(HAVE_SYSVIPC)
+#if !defined(HAVE_SOCKETS) && !defined(HAVE_SYSVIPC)
 #include <stdio.h>
 
 main (argc, argv)
@@ -41,9 +43,9 @@ main (argc, argv)
   exit (1);
 }
 
-#else /* BSD or HAVE_SYSVIPC */
+#else /* HAVE_SOCKETS or HAVE_SYSVIPC */
 
-#if defined(BSD) && ! defined (HAVE_SYSVIPC)
+#if defined(HAVE_SOCKETS)
 /* BSD code is very different from SYSV IPC code */
 
 #include <sys/types.h>
@@ -51,10 +53,10 @@ main (argc, argv)
 #include <sys/un.h>
 #include <stdio.h>
 #include <errno.h>
+#include <unistd.h>
 #include <sys/stat.h>
 
 extern int sys_nerr;
-extern char *sys_errlist[];
 extern int errno;
 
 main (argc, argv)
@@ -68,8 +70,6 @@ main (argc, argv)
   char *homedir, *cwd, *str;
   char string[BUFSIZ];
   struct stat statbfr;
-
-  char *getenv (), *getwd ();
 
   if (argc < 2)
     {
@@ -112,7 +112,8 @@ main (argc, argv)
   strcat (server.sun_path, "/.emacs_server");
 #endif
 
-  if (connect (s, &server, strlen (server.sun_path) + 2) < 0)
+  if (connect (s, (struct sockaddr *)&server,
+	       strlen (server.sun_path) + 2) < 0)
     {
       fprintf (stderr, "%s: ", argv[0]);
       perror ("connect");
@@ -125,11 +126,11 @@ main (argc, argv)
       exit (1);
     }
 
-  cwd = getwd (string);
+  cwd = getcwd (string, sizeof string);
   if (cwd == 0)
     {
-      /* getwd puts message in STRING if it fails.  */
-      fprintf (stderr, "%s: %s (%s)\n", argv[0], string,
+      fprintf (stderr, "%s: %s (%s)\n", argv[0],
+	       "Cannot get current working directory",
 	       (errno < sys_nerr) ? sys_errlist[errno] : "unknown error");
       exit (1);
     }
@@ -275,4 +276,4 @@ main (argc, argv)
 
 #endif /* HAVE_SYSVIPC */
 
-#endif /* BSD or HAVE_SYSVIPC */
+#endif /* HAVE_SOCKETS or HAVE_SYSVIPC */
