@@ -32,6 +32,8 @@ the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.  */
  */
 
 #include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
 
 FILE *outfile;
 
