@@ -586,15 +586,15 @@ direct_output_for_insert (c)
 {
 #ifndef COMPILER_REGISTER_BUG
   register
-#endif COMPILER_REGISTER_BUG
+#endif
     struct window *w = XWINDOW (selected_window);
 #ifndef COMPILER_REGISTER_BUG
   register
-#endif COMPILER_REGISTER_BUG
+#endif
     int hpos = cursor_hpos;
 #ifndef COMPILER_REGISTER_BUG
   register
-#endif COMPILER_REGISTER_BUG
+#endif
     int vpos = cursor_vpos;
 
   /* Give up if about to continue line */
