@@ -22,6 +22,7 @@ the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.  */
 
 #include <stdio.h>
 #include <ctype.h>
+#include "config.h"
 
 doprnt (buffer, bufsize, format, nargs, args)
      char *buffer;
