@@ -314,7 +314,7 @@ main (argc, argv, envp)
 #ifdef HIGHPRI
   setpriority (PRIO_PROCESS, getpid (), HIGHPRI);
   setuid (getuid ());
-#endif HIGHPRI
+#endif
 
   inhibit_window_system = 0;
 
@@ -402,7 +402,7 @@ main (argc, argv, envp)
 #endif
 #ifdef SIGXFSZ
       signal (SIGXFSZ, fatal_error_signal);
-#endif SIGXFSZ
+#endif
 
 #ifdef AIX
       /* This used to run fatal_error_signal,
@@ -489,7 +489,7 @@ main (argc, argv, envp)
       syms_of_alloc ();
 #ifdef MAINTAIN_ENVIRONMENT
       syms_of_environ ();
-#endif MAINTAIN_ENVIRONMENT
+#endif /* MAINTAIN_ENVIRONMENT */
       syms_of_read ();
       syms_of_print ();
       syms_of_eval ();
