@@ -90,8 +90,6 @@ If optional argument is supplied as  t,\n\
   (arg)
      Lisp_Object arg;
 {
-  extern long random ();
-  extern srandom ();
   extern long time ();
 
   if (EQ (arg, Qt))
